[package]
name = "context-hydra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
redb = "4.1.0"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.5", features = ["v4"] }
